# tina-testbed-speace

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_ML.md  SKILL.md  SPEACE-DESIGN-CONCETTUALE.md  SPEACE-Engineering-Document-v1.0.md  SPEACE-Engineering-Document-v1.1.md  SPEACE-Engineering-Document-v1.2.md  SPEACE-Engineering-Document-v1.3.md  SPEACE-Prototipo-Piano-di-Avvio.md  SPEACE-TASKS-ACTIVE.md  SPEACE-main.py  _speace_entry.py  avvia-autopilot.bat  avvia-speace.bat  docker-compose.yml  pyproject.toml  requirements.txt  run_push.ahk  setup.bat  setup.ps1  setup.sh  speace-prototipo.md  speace_auto_revision_report.json  speace_status.json  speace_world_model_test_report.json  state.json  test_integration.py
DigitalDNA/: epigenome.yaml  fitness_function.yaml  genome.yaml  mutation_rules.py  mutation_rules.yaml  regulatory_epigenome.yaml
MultiFramework/: architecture.md
SPEACE docs/: task.md
SPEACE_Cortex/: cortex_orchestrator.py  neural_bridge.py
SPECS/: ST-10_Memoria_Federata.md  ST-1_SPEACE_Cortex.md  ST-2_SMFOI_KERNEL.md  ST-3_DigitalDNA.md  ST-4_SafeProactive.md  ST-5_Team_Scientifico.md  ST-6_Agente_Organismico.md  ST-7_Multi_Framework.md  ST-8_Regulatory_Compliance.md  ST-9_Auto_Evolution.md
SafeProactive/: PROPOSALS.md
ahk/: speace-launcher.ahk  speace-monitor.ahk
benchmarks/: bench_cindex.py  bench_fitness.py  bench_latency.py  bench_llm_smoke.py  bench_neural_flow.py  bench_smoke.py  bench_tests.py  results.json  run_benchmarks.py  thresholds.yaml
config/: mosquitto.conf
cortex/: SMFOI-v3.py  SMFOI_v3.py  __init__.py  astrocyte_network.py  autopoietic_engine.py  base_compartment.py  conditional_scheduler.py  control_hierarchy.py  digital_brain.py  digital_reproduction.py  epigenetic_modulator.py  graph_engine.py  morphogenesis_engine.py  myelination_engine.py  neural_bridge.py  neural_flow.py  (+4 more)
(+326 files in other folders)
