[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speace"
version = "1.3.0"
description = "SPEACE – SuPer Entita Autonoma Cibernetica Evolutiva"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SPEACE Development Team / Rigene Project"},
]
keywords = [
    "ai", "agentic-framework", "multi-agent", "neural-network",
    "knowledge-graph", "cybernetic", "online-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "stable-baselines3>=2.0.0",
    "gymnasium>=0.28.0",
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "llama-cpp-python>=0.2.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.3.0",
]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[project.scripts]
speace = "_speace_entry:cli"
speace-cli = "_speace_entry:cli"

[project.urls]
Repository = "https://github.com/robertodebiasespeace/tina-testbed-speace"
Issues = "https://github.com/robertodebiasespeace/tina-testbed-speace/issues"

[tool.setuptools.packages.find]
include = [
    "SPEACE_Cortex*",
    "scripts*",
    "scientific-team*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
